# proxmox-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config.example.ini
proxmox_cli/: __init__.py  __main__.py  cli.py  client.py  commands.py  config.py  ip_utils.py  task.py
