[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxmox-cli"
version = "1.0.0"
description = "A flexible command-line interface for managing Proxmox VE servers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alexander Turcic", email = "alex@zeitgeist.se"}
]
keywords = ["proxmox", "cli", "virtualization", "vm", "management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "proxmoxer>=2.2.0",
    "platformdirs>=4.0.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "urllib3>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/alexzeitgeist/proxmox-cli"
Repository = "https://github.com/alexzeitgeist/proxmox-cli"
Issues = "https://github.com/alexzeitgeist/proxmox-cli/issues"

[project.scripts]
proxmox-cli = "proxmox_cli:main"
pve = "proxmox_cli:main"  # Short alias

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["proxmox_cli"]
